Sonar cube